--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "extract headings from html string",
   "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/legeneek/doc-head-extract/issues"
   },
-  "homepage": "https://github.com/legeneek/doc-head-extract#readme"
+  "homepage": "https://github.com/legeneek/doc-head-extract#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.4.1",
+    "regenerator-runtime": "^0.12.0"
+  }
 }
